--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,12 @@
   "name": "PR me",
   "description": "Find someone in your orgination to help review your pull request",
   "version": "2.0",
-  "permissions": ["activeTab"],
+  "permissions": ["activeTab", "storage"],
   "background": {
     "scripts": ["background.js"],
     "persistent": false
   },
   "browser_action": { "default_title": "PR me" },
-  "manifest_version": 2
+  "manifest_version": 2,
+  "options_page": "options.html"
 }
