--- a/manifest.json
+++ b/manifest.json
@@ -9,5 +9,10 @@
   },
   "browser_action": { "default_title": "PR me" },
   "manifest_version": 2,
-  "options_page": "options.html"
+  "options_page": "options.html",
+  "icons": {
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  }
 }
